# lib3mf-rs

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  BENCHMARK_QUICKSTART.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cube.3mf  deny.toml  rustfmt.toml  triangle.stl
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: bench-pr.yml  benchmark.yml  ci.yml  docs.yml  fuzz.yml  release.yml  security-audit.yml  wasm_ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/12-beam-lattice-writer/: 12-01-SUMMARY.md  12-VERIFICATION.md
benches/: comparison_bench.rs
book/: book.toml
book/src/: README.md  SUMMARY.md  architecture.md  cli-guide.md  contributing.md  extensions.md  feature-flags.md  getting-started.md  rust-api.md  validation-guide.md
crates/: README.md
crates/lib3mf-async/: Cargo.toml  README.md
crates/lib3mf-async/examples/: README.md  async_load.rs
crates/lib3mf-async/src/: archive.rs  lib.rs  loader.rs  zip.rs
crates/lib3mf-async/tests/: async_load_test.rs
crates/lib3mf-cli/: Cargo.toml  README.md  build.rs
crates/lib3mf-cli/examples/: custom_inspect.rs
crates/lib3mf-cli/src/: commands.rs  lib.rs  main.rs
crates/lib3mf-cli/src/commands/: batch.rs  merge.rs  split.rs  thumbnails.rs
crates/lib3mf-cli/tests/: batch_tests.rs  convert_integration.rs  merge_tests.rs  obj_materials_tests.rs  split_tests.rs
crates/lib3mf-converters/: Cargo.toml  README.md
crates/lib3mf-converters/examples/: obj_conversion.rs  stl_conversion.rs
crates/lib3mf-converters/src/: lib.rs  mtl.rs  obj.rs  stl.rs
crates/lib3mf-core/: Cargo.toml  README.md
crates/lib3mf-core/benches/: core_bench.rs  memory_bench.rs
crates/lib3mf-core/examples/: README.md  advanced_materials.rs  beam_lattice_ext.rs  boolean_operations.rs  components_transform.rs  create_cube.rs  displacement_mesh.rs  geometry_repair.rs  geometry_validation.rs  metadata_properties.rs  model_diff.rs  multi_part_load.rs  secure_content.rs  simple_read.rs  slice_data.rs  streaming_stats.rs  volumetric_demo.rs
crates/lib3mf-core/fuzz/: Cargo.toml
crates/lib3mf-core/fuzz/fuzz_targets/: model_parser_fuzzer.rs
crates/lib3mf-core/src/: error.rs  lib.rs
crates/lib3mf-core/src/archive/: mod.rs  model_locator.rs  opc.rs  zip_archive.rs
crates/lib3mf-core/src/crypto/: context.rs  encryption.rs  keys.rs  mod.rs  verification.rs
crates/lib3mf-core/src/model/: build.rs  core.rs  crypto.rs  materials.rs  mesh.rs  mod.rs  model.rs  package.rs  repair.rs  resolver.rs  resources.rs  secure_content.rs  slice.rs  stats.rs  stats_impl.rs  units.rs  volumetric.rs
crates/lib3mf-core/src/parser/: bambu_config.rs  beamlattice_parser.rs  boolean_parser.rs  build_parser.rs  component_parser.rs  crypto_parser.rs  displacement_parser.rs  material_parser.rs  mesh_parser.rs  mod.rs  model_parser.rs  secure_content_parser.rs  slice_parser.rs  streaming.rs  visitor.rs  volumetric_parser.rs  xml_parser.rs
crates/lib3mf-core/src/utils/: c14n.rs  diff.rs  hardware.rs  mod.rs
crates/lib3mf-core/src/validation/: bvh.rs  displacement.rs  geometry.rs  mod.rs  report.rs  schema.rs  semantic.rs
crates/lib3mf-core/src/writer/: beamlattice_writer.rs  displacement_writer.rs  mesh_writer.rs  mod.rs  model_write_zip.rs  model_writer.rs  opc_writer.rs  package_writer.rs  slice_writer.rs  volumetric_writer.rs  xml_writer.rs
crates/lib3mf-core/tests/: bambu_integration.rs  beamlattice_radius_roundtrip.rs  beamlattice_roundtrip.rs  beamlattice_test.rs  boolean_tests.rs  conformance.rs  context_test.rs  crypto_test.rs  displacement_roundtrip.rs  encryption_test.rs  error_scenarios.rs  extension_integration.rs  keys_test.rs  materials_test.rs  multipart_test.rs  object_type_tests.rs  package_writer_test.rs  parse_benchy.rs  parse_deadpool.rs  production_test.rs  proptests.rs  read_benchy.rs  repair_test.rs  resolve_meshes_integration.rs  roundtrip_benchy.rs  secure_content_test.rs  slice_roundtrip.rs  slice_test.rs  stats_benchy.rs  stats_deadpool.rs  streaming_extension_test.rs  streaming_test.rs  validation_test.rs  vendor_namespace_roundtrip.rs  verification_test.rs  volumetric_roundtrip.rs  volumetric_test.rs
crates/lib3mf-io/: Cargo.toml  README.md
crates/lib3mf-io/src/: lib.rs  obj.rs  stl.rs
crates/lib3mf-io/tests/: io_test.rs
crates/lib3mf-wasm/: Cargo.toml  README.md  package.json
crates/lib3mf-wasm/examples/: README.md  index.html
crates/lib3mf-wasm/src/: lib.rs
docs/: GUIDE.md  alternatives.md  benchmark-comparison-guide.md  conformance.md  features.md  performance.md
docs/blog/: launch-announcement.md  market-gap-analysis.md
docs/design/: 01-model-statistics.md
docs/marketing/: hn-post.md  reddit-post.md  twir-submission.md
docs/specifications/: Lib3mf-rs Architecture & Implementation Plan.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/parse_xml/: minimal.xml
fuzz/corpus/writer_roundtrip/: seed.3mf
fuzz/dictionaries/: 3mf.dict
fuzz/fuzz_targets/: parse_crypto.rs  parse_extensions.rs  parse_materials.rs  parse_model.rs  parse_opc.rs  parse_xml.rs  writer_roundtrip.rs
models/: Benchy.stl
scripts/: compare_benchmarks.sh  qa_test_suite.sh  test_cli.sh
skills/3mf-spec-expert/: SKILL.md
skills/crypto-security/: SKILL.md
skills/mesh-processing/: SKILL.md
skills/xml-zip-patterns/: SKILL.md
tests/benchmark_data/: README.md
tests/conformance/: mod.rs  mustfail.rs  mustpass.rs
tests/fuzz_regression/: README.md
