[package]
name = "lib3mf-async"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Asynchronous I/O support for lib3mf-rs"

[dependencies]
async-trait = "0.1.89"
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
futures-lite = "2.6.1"
lib3mf-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.18", features = ["compat"] }
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
