[package]
name = "lib3mf-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"
description = "Command-line tool for analyzing and processing 3MF files"

[features]
default = ["crypto", "parallel"]
crypto = ["lib3mf-core/crypto"]
parallel = ["lib3mf-core/parallel"]

[lib]
name = "lib3mf_cli"
path = "src/lib.rs"

[[bin]]
name = "3mf"
path = "src/main.rs"

[dependencies]
lib3mf-core.workspace = true
lib3mf-converters.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
anyhow.workspace = true

[build-dependencies]
vergen-gix = { version = "9.1.0", features = ["build", "cargo", "si"] }
