[package]
name = "lib3mf-converters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "STL and OBJ converters for lib3mf-rs"

[dependencies]
lib3mf-core = { workspace = true, features = ["parallel"] }
thiserror.workspace = true
byteorder.workspace = true
glam.workspace = true

[dev-dependencies]
anyhow.workspace = true

# Configure docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
