[package]
name = "lib3mf-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core implementation of the 3D Manufacturing Format (3MF) in Rust"

[dependencies]
aes-gcm = "0.10.3"
anyhow.workspace = true
byteorder.workspace = true
glam.workspace = true
quick-xml = { version = "0.37.0", features = ["serialize"] }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
uuid.workspace = true
zip = "2.2.0"
rsa.workspace = true
sha2.workspace = true
sha1.workspace = true
base64 = "0.22.1"
rayon.workspace = true
x509-parser.workspace = true
rand.workspace = true
lexical-core.workspace = true

[dev-dependencies]
proptest = "1.6.0"
criterion.workspace = true

[[bench]]
name = "core_bench"
harness = false

[features]
default = []
async = ["dep:tokio"]
