[package]
name = "lib3mf-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for 3MF parsing - browser and edge deployment"
keywords = ["3mf", "wasm", "webassembly", "browser", "3d-printing"]
categories = ["wasm", "parser-implementations"]
homepage = "https://sscargal.github.io/lib3mf-rs/"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
lib3mf-core.workspace = true

[dependencies.js-sys]
version = "0.3"
optional = true

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Configure docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
